refactor repeating code
