# docs/swagger.json
@@ -291,9 +291,9 @@
                 }
             }
         },
-        "/users/": {
+        "/signup/": {
             "post": {
-                "description": "create by json User",
+                "description": "create a new user",
                 "consumes": [
                     "application/json"
                 ],
@@ -303,7 +303,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Create a user",
+                "summary": "Sign up",
                 "parameters": [
                     {
                         "description": "Add User",
